--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Angular-It</title>
-  <base href="https://carolinaf86.github.io/angularit">
+  <base href="https://carolinaf86.github.io/angularit/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.16a06a0749d9dd7cc4e3.css"></head>
